--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse.html
@@ -117,35 +117,15 @@
 				<img class="leftBottom" src="${request.contextPath}/statics/css/fullPage/img/leftBottom.png" />
 				<img class="rightTop" src="${request.contextPath}/statics/css/fullPage/img/rightTop.png" />
 				<img class="rightBottom" src="${request.contextPath}/statics/css/fullPage/img/rightBottom.png" />
-				<!--<img class="imgBg" src="img/imgBg.jpg" />-->
 				<div id="zoom-marker-div" class="zoom-marker-div">
+					<img id="imgBg" :src="'${request.contextPath}/statics/img/'+mapName+'.jpg'" />
 					<img class="zoom-marker-img" id="zoom-marker-img-alt" alt="zoom-marker-img-alt" name="zoom-marker-img-alt" draggable="false" />
 				</div>
-				<!--<div style="height: 100%;">-->
-				<!--<el-carousel>
-                    <el-carousel-item>
-                        <div class="lunboImg">
-                            <div class="img1">
-                                <img style="opacity: .7;" src="img/下雨.gif" />
-                            </div>
-                        </div>
-                    </el-carousel-item>
-                    <el-carousel-item>
-                        <div class="lunboImg">
-                            <div class="img1">
-                                <img src="img/下雪.gif" />
-                            </div>
-                        </div>
-                    </el-carousel-item>
-                    <el-carousel-item>
-                        <div class="lunboImg">
-                            <div class="img1">
-                                <img src="img/刮风.gif" />
-                            </div>
-                        </div>
-                    </el-carousel-item>
-                </el-carousel>-->
-				<!--</div>-->
+				<div :class="weater.temperature>30 ? 'hightWeater gif' : 'gif'">
+					<img v-if="weater.wid==03||weater.wid==04||weater.wid==05||weater.wid==06||weater.wid==07||weater.wid==08||weater.wid==09||weater.wid==10||weater.wid==11||weater.wid==12||weater.wid==21||weater.wid==22||weater.wid==23||weater.wid==24||weater.wid==25" style="opacity: .7;" src="${request.contextPath}/statics/css/fullPage/img/下雨.gif" />
+					<img v-if="weater.wid==13||weater.wid==14||weater.wid==15||weater.wid==16||weater.wid==17||weater.wid==06||weater.wid==26||weater.wid==27||weater.wid==28" src="${request.contextPath}/statics/css/fullPage/img/下雪.gif" />
+					<img v-if="weater.wid==29||weater.wid==30" src="${request.contextPath}/statics/css/fullPage/img/刮风.gif" />
+				</div>
 
 			</div>
 		</div>
@@ -249,9 +229,9 @@
 <script src="${request.contextPath}/statics/libs/vue.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="${request.contextPath}/statics/js/element.min.js" type="text/javascript" charset="utf-8"></script>
 
-<script src="${request.contextPath}/statics/js/fullPage/echarts.min.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="${request.contextPath}/statics/js/fullPage/echarts.min.js" type="text/javascript" charset="utf-8"></script>-->
 <!--<script src="js/timepeople.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="${request.contextPath}/statics/js/fullPage/chart.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="${request.contextPath}/statics/js/fullPage/chart.js" type="text/javascript" charset="utf-8"></script>-->
 
 <script src="${request.contextPath}/statics/js/fullPage/greenhouse.js" type="text/javascript" charset="utf-8"></script>
 </body>
