--- a/renren-admin/src/main/resources/templates/index.html
+++ b/renren-admin/src/main/resources/templates/index.html
@@ -558,6 +558,10 @@
             <label for="">高温预警：</label>
             <input type="text" v-model="hightTem" placeholder="高温设置">
         </p>
+        <p>
+            <label for="">低温预警：</label>
+            <input type="text" v-model="lowTem" placeholder="高温设置">
+        </p>
         <!--<p>-->
             <!--<label for="">原密码：</label>-->
             <!--<input type="password" v-model="password" placeholder="原密码">-->
