--- a/renren-admin/src/main/resources/statics/css/fullPage/common.css
+++ b/renren-admin/src/main/resources/statics/css/fullPage/common.css
@@ -187,6 +187,16 @@ header .rightHeader a i , header .rightHeader a{
     50% {border: 4px solid rgba(245, 108, 108,0);}
     100% {border: 4px solid rgba(245, 108, 108,1);}
 }
+.gif.lowWeater{
+    border: 4px solid rgba(120, 219, 245,1);
+    animation:myfirst 2s linear infinite;
+}
+@keyframes myfirst
+{
+    0% {border: 4px solid rgba(120, 219, 245,1);}
+    50% {border: 4px solid rgba(120, 219, 245,0);}
+    100% {border: 4px solid rgba(120, 219, 245,1);}
+}
 /*.middle .lunboImg .img{
 	height: 100%;
 	background: url(../img/imgBg.jpg);
@@ -310,4 +320,14 @@ li.legendLi1:nth-child(5):before{
     to {
         transform: rotate(359deg)
     }
+}
+
+.snow-canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    pointer-events: none;
 }
