--- a/renren-admin/src/main/resources/templates/login.html
+++ b/renren-admin/src/main/resources/templates/login.html
@@ -1,118 +1,126 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>智慧农业</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap.min.css">
-  <link rel="stylesheet" href="${request.contextPath}/statics/css/font-awesome.min.css">
-  <link rel="stylesheet" href="${request.contextPath}/statics/css/AdminLTE.min.css">
-  <!-- AdminLTE Skins. Choose a skin from the css/skins
-       folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="${request.contextPath}/statics/css/all-skins.min.css">
-  <link rel="stylesheet" href="${request.contextPath}/statics/css/main.css">
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body class="hold-transition login-page">
-<div class="login-box" id="rrapp" v-cloak>
-  <div class="login-logo">
-    <b>智慧农业</b>
-  </div>
-  <!-- /.login-logo -->
-  <div class="login-box-body">
-      <p class="login-box-msg">管理员登录</p>
-      <div v-if="error" class="alert alert-danger alert-dismissible">
-        <h4 style="margin-bottom: 0px;"><i class="fa fa-exclamation-triangle"></i> {{errorMsg}}</h4>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="text" class="form-control" v-model="username" placeholder="账号">
-        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="password" class="form-control" v-model="password" @keyup.enter="login" placeholder="密码">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-      </div>
-      <!--<div class="form-group has-feedback">-->
-        <!--<input type="text" class="form-control" v-model="captcha" @keyup.enter="login" placeholder="验证码">-->
-        <!--<span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>-->
-      <!--</div>-->
-      <!--<div class="form-group has-feedback">-->
-        <!--<img alt="如果看不清楚，请单击图片刷新！" class="pointer" :src="src" @click="refreshCode">-->
-        <!--&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>-->
-      <!--</div>-->
-      
-      
-      <div class="row">
-        <div class="col-xs-8">
-          <div class="checkbox icheck">
-          </div>
-        </div>
-        <!-- /.col -->
-        <div class="col-xs-4">
-          <button type="button" class="btn btn-primary btn-block btn-flat" @click="login">登录</button>
-        </div>
-        <!-- /.col -->
-      </div>
-    <!-- /.social-auth-links -->
+<html xmlns="http://www.w3.org/1999/xhtml" class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">
 
-  </div>
-  <!-- /.login-box-body -->
+<head>
+    <meta http-equiv="Cache-Control" content="max-age=259200, must-revalidate">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="googlebot" content="archive">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>智慧农业</title>
+    <!-- 主引导-->
+    <link rel="stylesheet" href="${request.contextPath}/statics/css/stylesheets/normalize-min.css">
+    <!--<link rel="stylesheet" href="stylesheets/pace.css">-->
+    <link rel="stylesheet" href="${request.contextPath}/statics/css/stylesheets/main.css">
+</head>
+
+<body>
+
+<div id="rrapp" class="page-wrapper page" style="">
+
+    <div class="container">
+
+        <div class="center">
+
+            <div class="planet-big centered">
+                <!-- 第一屏动画 -->
+                <span class="round round-1"></span>
+                <span class="round round-2"></span>
+                <span class="round round-3"></span>
+                <span class="round round-4"></span>
+                <span class="round round-5"></span>
+
+            </div>
+
+            <div class="planet-big-content centered screen-1">
+                <h2>
+                    智慧农业
+                    <!--<p style="font-size:16px;font-weight: normal;letter-spacing: 1.5px;margin-bottom: 30px;">བོད་རང་སྐྱོང་ལྗོངས་ཀྱི་འཕྲིན་གཏོང་དོ་དམ་ཅུས།</p>-->
+                    <!--<span class="title-cursive">一周年盛大活动</span>-->
+                </h2>
+                <div v-if="error">
+                    <h4 style="margin-bottom: 0px;color: #F56C6C;"> {{errorMsg}}</h4>
+                </div>
+                <div class="username form_group_btn">
+                    <!--<input type="text" placeholder="请输入用户名" />-->
+                    <input type="text" class="form-control" v-model="username" placeholder="账号">
+                    <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                </div>
+                <div class="password form_group_btn">
+                    <!--<input type="password" placeholder="请输入密码" />-->
+                    <input type="password" class="form-control" v-model="password" @keyup.enter="login" placeholder="密码">
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                <!--<div class="password_j form_group_btn">-->
+                    <!--<input type="checkbox" /> <span style="color: #eee;">记住密码？</span>-->
+                <!--</div>-->
+                <div class="login form_group_btn">
+                    <button @click="login">登录</button>
+                </div>
+            </div>
+
+        </div>
+        <!-- end of center -->
+    </div>
+    <!-- end of container -->
+
 </div>
-<!-- /.login-box -->
-<script src="${request.contextPath}/statics/libs/jquery.min.js"></script>
+<!-- end of page-wrapper -->
+
+
+<script src="${request.contextPath}/statics/js/jquery-2.1.1.min.js"></script>
 <script src="${request.contextPath}/statics/libs/vue.min.js"></script>
-<script src="${request.contextPath}/statics/libs/bootstrap.min.js"></script>
-<script src="${request.contextPath}/statics/libs/jquery.slimscroll.min.js"></script>
-<script src="${request.contextPath}/statics/libs/fastclick.min.js"></script>
-<script src="${request.contextPath}/statics/libs/app.js"></script>
+<script src="${request.contextPath}/statics/js/fullpage.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
-var vm = new Vue({
-	el:'#rrapp',
-	data:{
-		username: '',
-		password: '',
-		captcha: '',
-		error: false,
-		errorMsg: '',
-		src: 'captcha.jpg'
-	},
-	beforeCreate: function(){
-		if(self != top){
-			top.location.href = self.location.href;
-		}
-	},
-	methods: {
-		refreshCode: function(){
-			this.src = "captcha.jpg?t=" + $.now();
-		},
-		login: function (event) {
-			var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
-			$.ajax({
-				type: "POST",
-			    url: "sys/login",
-			    data: data,
-			    dataType: "json",
-			    success: function(result){
-					if(result.code == 0){//登录成功
-						parent.location.href ='index.html';
-					}else{
-						vm.error = true;
-						vm.errorMsg = result.msg;
-						
-						vm.refreshCode();
-					}
-				}
-			});
-		}
-	}
-});
+    $(function(){
+//				requestFullScreen();
+//        $('button').click(function(){
+//            requestFullScreen();
+//        })
+    })
 </script>
+<script type="text/javascript">
+    var vm = new Vue({
+        el:'#rrapp',
+        data:{
+            username: '',
+            password: '',
+            captcha: '',
+            error: false,
+            errorMsg: '',
+            src: 'captcha.jpg'
+        },
+        beforeCreate: function(){
+            if(self != top){
+                top.location.href = self.location.href;
+            }
+        },
+        methods: {
+            refreshCode: function(){
+                this.src = "captcha.jpg?t=" + $.now();
+            },
+            login: function (event) {
+                var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
+                $.ajax({
+                    type: "POST",
+                    url: "sys/login",
+                    data: data,
+                    dataType: "json",
+                    success: function(result){
+                        if(result.code == 0){//登录成功
+                            parent.location.href ='index.html';
+                        }else{
+                            vm.error = true;
+                            vm.errorMsg = result.msg;
+
+                            vm.refreshCode();
+                        }
+                    }
+                });
+            }
+        }
+    });
+</script>
+
 </body>
+
 </html>
