--- a/renren-admin/src/main/resources/templates/modules/fullPage/cowshed.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/cowshed.html
@@ -184,7 +184,7 @@
 			<!--{{mapDevId}}-->
 			<div style="border:1px dashed #808080;width: 960px;height: 540px;margin-top: 5px;">
 				<object type='application/x-vlc-plugin' classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" id='vlc' events='True' width="960" height="540">
-					<param name='mrl' value='rtsp://admin:12345678@192.168.1.120/stream2' />
+					<param name='mrl' :value='videoUrl' />
 					<param name='volume' value='50'/>
 					<param name='autoplay' value='true' />
 					<param name='loop' value='false' />
