--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
@@ -142,72 +142,72 @@
 		</div>
 		<div class="right">
 
-			<!--<div class="chart">-->
-				<!--<span class="title">土壤情况分析</span>-->
-				<!--<div style="height: calc(100% - 34px);display: flex;flex-direction: column;">-->
-					<!--<div style="flex: 1;display: flex;">-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-IOTtubiao_huabanfuben"></i>-->
-							<!--<p>温度</p>-->
-							<!--<span>{{info1['温度']}}</span>-->
-						<!--</div>-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-IOTtubiao_huabanfuben1"></i>-->
-							<!--<p>湿度</p>-->
-							<!--<span>{{info1['湿度']}}</span>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div style="flex: 1;display: flex;">-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-taiyang"></i>-->
-							<!--<p>光照度</p>-->
-							<!--<span>{{info1['光照度']}}</span>-->
-						<!--</div>-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-EC"></i>-->
-							<!--<p>土壤电导率</p>-->
-							<!--<span>{{info1['土壤电导率']}}</span>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div style="flex: 1;display: flex;">-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-turangwendu"></i>-->
-							<!--<p>土壤温度</p>-->
-							<!--<span>{{info1['土壤温度']}}</span>-->
-						<!--</div>-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-turangshidu"></i>-->
-							<!--<p>土壤湿度</p>-->
-							<!--<span>{{info1['土壤湿度']}}</span>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div style="flex: 1;display: flex;">-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-turangPH"></i>-->
-							<!--<p>土壤PH</p>-->
-							<!--<span>{{info1['土壤电ph']}}</span>-->
-						<!--</div>-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-turangdanhanliang"></i>-->
-							<!--<p>土壤氮含量</p>-->
-							<!--<span>{{info1['土壤氮']}}</span>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div style="flex: 1;display: flex;">-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-turanglinhanliang"></i>-->
-							<!--<p>土壤磷含量</p>-->
-							<!--<span>{{info1['土壤磷']}}</span>-->
-						<!--</div>-->
-						<!--<div class="sunDivItem">-->
-							<!--<i class="iconfont icon-turangjiahanliang"></i>-->
-							<!--<p>土壤钾含量</p>-->
-							<!--<span>{{info1['土壤钾']}}</span>-->
-						<!--</div>-->
-					<!--</div>-->
+			<div class="chart">
+				<span class="title">土壤情况分析</span>
+				<div style="height: calc(100% - 34px);display: flex;flex-direction: column;">
+					<div style="flex: 1;display: flex;">
+						<div class="sunDivItem">
+							<i class="iconfont icon-IOTtubiao_huabanfuben"></i>
+							<p>温度</p>
+							<span>{{info1['温度']}}</span>
+						</div>
+						<div class="sunDivItem">
+							<i class="iconfont icon-IOTtubiao_huabanfuben1"></i>
+							<p>湿度</p>
+							<span>{{info1['湿度']}}</span>
+						</div>
+					</div>
+					<div style="flex: 1;display: flex;">
+						<div class="sunDivItem">
+							<i class="iconfont icon-taiyang"></i>
+							<p>光照度</p>
+							<span>{{info1['光照度']}}</span>
+						</div>
+						<div class="sunDivItem">
+							<i class="iconfont icon-EC"></i>
+							<p>土壤电导率</p>
+							<span>{{info1['土壤电导率']}}</span>
+						</div>
+					</div>
+					<div style="flex: 1;display: flex;">
+						<div class="sunDivItem">
+							<i class="iconfont icon-turangwendu"></i>
+							<p>土壤温度</p>
+							<span>{{info1['土壤温度']}}</span>
+						</div>
+						<div class="sunDivItem">
+							<i class="iconfont icon-turangshidu"></i>
+							<p>土壤湿度</p>
+							<span>{{info1['土壤湿度']}}</span>
+						</div>
+					</div>
+					<div style="flex: 1;display: flex;">
+						<div class="sunDivItem">
+							<i class="iconfont icon-turangPH"></i>
+							<p>土壤PH</p>
+							<span>{{info1['土壤电ph']}}</span>
+						</div>
+						<div class="sunDivItem">
+							<i class="iconfont icon-turangdanhanliang"></i>
+							<p>土壤氮含量</p>
+							<span>{{info1['土壤氮']}}</span>
+						</div>
+					</div>
+					<div style="flex: 1;display: flex;">
+						<div class="sunDivItem">
+							<i class="iconfont icon-turanglinhanliang"></i>
+							<p>土壤磷含量</p>
+							<span>{{info1['土壤磷']}}</span>
+						</div>
+						<div class="sunDivItem">
+							<i class="iconfont icon-turangjiahanliang"></i>
+							<p>土壤钾含量</p>
+							<span>{{info1['土壤钾']}}</span>
+						</div>
+					</div>
 
-				<!--</div>-->
-			<!--</div>-->
+				</div>
+			</div>
 
 		</div>
 	</section>
