--- a/renren-admin/src/main/resources/templates/modules/list/map.html
+++ b/renren-admin/src/main/resources/templates/modules/list/map.html
@@ -124,7 +124,7 @@
                 <el-option
                         v-for="item in devNoList"
                         :key="item.devId"
-                        :label="item.ethernet"
+                        :label="item.ip"
                         :value="item.devId">
                 </el-option>
             </el-select>
