--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
@@ -54,11 +54,11 @@
 						<tr>
 							<th>所属区域</th>
 							<th>设备名称</th>
-							<th>mac地址</th>
+							<th>IP地址</th>
 							<th>设备状态</th>
 						</tr>
 						<tr v-for="item in tableData">
-							<td>{{item.regionId}}</td>
+							<td>{{item.regionName}}</td>
 							<td>{{item.deviceName}}</td>
 							<td>{{item.ip}}</td>
 							<td>
