--- a/renren-admin/src/main/resources/templates/modules/fullPage/cowshed.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/cowshed.html
@@ -183,7 +183,7 @@
 		<div style="color: #000;">
 			<!--{{mapDevId}}-->
 			<div style="border:1px dashed #808080;width: 960px;height: 540px;margin-top: 5px;">
-				<object type='application/x-vlc-plugin' classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" id='vlc' events='True' width="960" height="540">
+				<object type='application/x-vlc-plugin' classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" codebase="http://download.videolan.org/pub/videolan/vlc/last/win32/axvlc.cab" id='vlc' events='True' width="960" height="540">
 					<param name='mrl' :value='videoUrl' />
 					<param name='volume' value='50'/>
 					<param name='autoplay' value='true' />
