--- a/renren-admin/src/main/resources/templates/modules/fullPage/cowshed.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/cowshed.html
@@ -17,17 +17,13 @@
 <div class="bgDiv"></div>
 <div id="box" v-cloak>
 	<header>
-		<img class="security1" width="60px" src="${request.contextPath}/statics/css/fullPage/img/titleI.png" />
-		<span class="time">{{data}}<br />{{time}}</span>
+		<img width="" src="${request.contextPath}/statics/css/fullPage/img/logo.png" />
 		<span class="titleHeader">
-					<!--<img class="security1" width="40px" src="img/titleI.png"/>-->
-					牧场大数据分析
+					长子县智慧农业监控数据中心
 				</span>
 		<div class="rightHeader">
-			<div class="">
-
-
-			</div>
+			<img class="security1" width="60px" src="${request.contextPath}/statics/css/fullPage/img/titleI.png" />
+			<span class="time">{{data}}<br />{{time}}</span>
 		</div>
 	</header>
 	<section>
