--- a/renren-admin/src/main/resources/statics/css/fullPage/common.css
+++ b/renren-admin/src/main/resources/statics/css/fullPage/common.css
@@ -79,6 +79,19 @@ header .rightHeader a i , header .rightHeader a{
     text-decoration: none;
 }
 
+.chartDiv{
+    position: relative;
+    overflow: hidden;
+}
+.chartDivDiv{
+    position: absolute;
+    left:0;
+    width: calc(100% + 20px);
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .middle{
     flex: 8;
     margin: 0 10px;
