--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse3.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse3.html
@@ -51,6 +51,7 @@
 					<div class="chart">
 						<span class="title">设备监控列表</span>
 						<div class="chartDiv" id="tableDiv" style="height: calc(100% - 50px);">
+							<div class="chartDivDiv">
 							<table style="width: 100%">
 								<tr>
 									<th>所属区域</th>
@@ -68,6 +69,7 @@
 									</td>
 								</tr>
 							</table>
+							</div>
 						</div>
 					</div>
 				</div>
