--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
@@ -45,23 +45,26 @@
 			<div class="chart">
 				<span class="title">设备监控列表</span>
 				<div class="chartDiv" style="height: calc(100% - 34px);">
-					<table style="width: 100%">
-						<tr>
-							<th>所属区域</th>
-							<th>设备名称</th>
-							<th>IP地址</th>
-							<th>设备状态</th>
-						</tr>
-						<tr v-for="item in tableData">
-							<td>{{item.regionName}}</td>
-							<td>{{item.deviceName}}</td>
-							<td>{{item.ip}}</td>
-							<td>
-								<span v-if="item.deviceStatus == 1" style="color: #409EFF;font-size: 12px;">在线</span>
-								<span v-if="item.deviceStatus == 0" style="color: #f56c6c;font-size: 12px;">离线</span>
-							</td>
-						</tr>
-					</table>
+					<div class="chartDivDiv">
+						<table style="width: 100%">
+							<tr>
+								<th>所属区域</th>
+								<th>设备名称</th>
+								<th>IP地址</th>
+								<th>设备状态</th>
+							</tr>
+							<tr v-for="item in tableData">
+								<td>{{item.regionName}}</td>
+								<td>{{item.deviceName}}</td>
+								<td>{{item.ip}}</td>
+								<td>
+									<span v-if="item.deviceStatus == 1" style="color: #409EFF;font-size: 12px;">在线</span>
+									<span v-if="item.deviceStatus == 0" style="color: #f56c6c;font-size: 12px;">离线</span>
+								</td>
+							</tr>
+						</table>
+					</div>
+
 				</div>
 			</div>
 		</div>
