--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
@@ -206,7 +206,7 @@
 
 				<!--</div>-->
 			<!--</div>-->
-			<div class="chart">
+			<div class="chart1">
 				<span class="title">近几天天气情况</span>
 				<div style="height: calc(100% - 34px);display: flex;flex-direction: column;">
 					<template v-for="item in weater.weatherItemList">
@@ -228,7 +228,7 @@
 					</template>
 				</div>
 			</div>
-			<div class="chart">
+			<div class="chart1">
 				<span class="title">近几天温度变化</span>
 				<div style="height: calc(100% - 34px);" id="wendu"></div>
 			</div>
