--- a/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
+++ b/renren-admin/src/main/resources/templates/modules/fullPage/greenhouse2.html
@@ -242,13 +242,14 @@
 			width="1000px">
 		<div style="color: #000;">
 			<!--{{mapDevId}}-->
-			<div style="border:1px dashed #808080;width: 960px;height: 540px;margin-top: 5px;">
+			<div v-if="markVisible" id="vlcDivVido" style="border:1px dashed #808080;width: 960px;height: 540px;margin-top: 5px;">
 				<object type='application/x-vlc-plugin' classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" id='vlc' events='True' width="960" height="540">
 					<param name='mrl' :value='videoUrl' />
 					<param name='volume' value='50'/>
 					<param name='autoplay' value='true' />
 					<param name='loop' value='false' />
 					<param name='fullscreen' value='false' />
+					<param name="invokeURLs" value="1">
 				</object>
 			</div>
 		</div>
