--- a/renren-admin/src/main/resources/statics/css/fullPage/greenhouse.css
+++ b/renren-admin/src/main/resources/statics/css/fullPage/greenhouse.css
@@ -89,6 +89,12 @@ table tr td{
 	border-left: 4px solid #f3bc40;
 }
 
+.right .chart1:nth-child(1){
+	flex:2;
+}
+.right .chart1:nth-child(2){
+	flex:1;
+}
 .right .chart1{
 	/*flex: 1;*/
 	margin-bottom: 10px;
